src/styles/main.css
:root {
  --header-background-color: linear-gradient(
    200.7deg,
    rgb(242, 133, 0) 5.7%,
    rgb(202, 50, 50) 92.4%
  );
  --body-background-color: #2a2727;
  --search-bar-border-color: rgb(242, 133, 0);
}

/* general rules */

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

/* Google icons */
@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
/* Roboto font */
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");

body {
  background-color: var(--body-background-color);
  margin: 0;
  padding: 0;
}

header {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background: var(--header-background-color);
  color: #fff;
  padding: 0.2rem;
}
.header-container {
  display: flex;
  padding: 0.5rem;
  gap: 10px;
  flex-flow: row wrap;
  align-items: center;
}

table {
  width: 100%;
  padding: 0.5rem;
  text-align: center;
  color: #fff;
}

.header-container > img {
  width: 80px;
}

img {
  width: 5rem;
}

h3 {
  font-size: 2.1rem;
  color: #fff;
  margin: 0;
  padding: 0;
}

p {
  color: #fff;
  margin: 0;
  padding: 0;
  font-size: 5rem;
}

/* form element */

form {
  display: flex;
  justify-content: center;
  align-items: center;
}

form > .material-symbols-outlined {
  display: flex;
  align-items: center;
  gap: 3px;
}

input:focus {
  outline: none;
}

/* search button */
.search-button {
  position: relative;
  cursor: pointer;
  border: 6px solid var(--search-bar-border-color);
  background-color: var(--search-bar-border-color);
  border-left: none;
  color: white;
  border-bottom-right-radius: 15px;
  border-top-right-radius: 15px;
  height: 33.5px;
  right: 10px;
}

.city-search-input {
  padding: 1rem;
  width: 300px;
  border: 2px solid var(--search-bar-border-color);
  height: 30px;
  border-radius: 15px;
}

.main-container {
  display: flex;
  flex-flow: column wrap;
  gap: 3rem;
  padding-top: 5rem;
}

.content-container {
  display: flex;
  justify-content: center;
}

.weather-container {
  display: flex;
  flex-flow: column wrap;
  gap: 2rem;
}

.location-information-container {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-content: center;
  align-items: center;
  gap: 10px;
}

.weather-image-container {
  display: flex;
}

.weather-condition-container {
  display: flex;
  justify-content: center;
}

.additional-info-container {
  display: flex;
  gap: 10px;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
}
.weather-condition {
  font-size: 1rem;
}

.current-temp {
  font-family: "Roboto", sans-serif;
  font-size: 5rem;
  font-weight: 500;
  color: #fff;
}

.current-temp::after {
  content: "°";
}

.min-max-temp {
  font-size: 1rem;
}

.humidity {
  font-size: 1rem;
}

.humidity::before {
  content: "Humidity: ";
}

.humidity::after {
  content: "%";
}

.table-header-icon,
.data-icon {
  display: none;
}

@media (min-width: 400px) {
  .table-header-icon,
  .data-icon {
    display: block;
    font-size: 1.2rem;
  }

  @media (min-width: 550px) {
    .city-search-input {
      width: 450px;
      height: 50px;
      border-radius: 15px;
    }
    .search-button {
      height: 49.5px;
      right: 10px;
    }
  }
}

@media (min-width: 800px) {
  .city-search-input {
    width: 750px;
    height: 50px;
  }
  .search-button {
    height: 49.5px;
  }
}

